k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: hermes-frontend
  name: hermes-frontend
  namespace: default 
spec:
  type: ClusterIP
  ports:
  - name: http
    port: 3000 
    targetPort: 80 
    protocol: TCP 
  selector:
    app: hermes-frontend
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: hermes-backend
  name: hermes-backend
  namespace: default 
spec:
  type: ClusterIP
  ports:
  - name: http
    port: 8000 
    targetPort: 8000
    protocol: TCP 
  selector:
    app: hermes-backend
